feat: add 2020_02_25 course

--- a/page2.html
+++ b/page2.html
@@ -11,9 +11,24 @@
       <h1>Mon super site</h1>
       <nav>
         <h2>Menu de mon site</h2>
-        <ul>
-          <li><a href="index.html">Index</a></li>
-          <li><a href="page2.html">Page 2</a></li>
+        <ul id="menu">
+          <li>
+            <a href="index.html">Index</a>
+            <ul>
+              <li>Item 1.1</li>
+              <li>Item 1.2</li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="page2.html">Page 2</a>
+            <ul>
+              <li>Item 2.1</li>
+              <li>
+                Item 2.2
+              </li>
+            </ul>
+          </li>
         </ul>
       </nav>
     </header>
