fix: minor fixes on html

--- a/web/native/pages/index.html
+++ b/web/native/pages/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Site de test</h1>
 
+    <!-- ACTIONS -->
     <section>
       <h2>Actions</h2>
       <button onclick="showUsers()">Show all users</button>
@@ -22,13 +23,12 @@
           id="givenName"
           type="text"
           placeholder="Saisissez votre prénom"
-          minlength="1"
         />
         <button type="submit">S'inscrire</button>
       </form>
     </section>
 
-    <!-- RESULT SECTION -->
+    <!-- RESULT -->
     <section>
       <h2>Result</h2>
       <div id="result-view"></div>
